--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
   ],
   "compilerOptions": {
     "jsx": "react-jsx",
+    "outDir": "./dist",
+    "rootDir": "./src",
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
